# ts-check

./: Cargo.toml  export-smth.ts  index.ts  inline-types.ts  other-index.ts  post-merge.hook  readme.md  rustfmt.toml  tsconfig.json
.github/workflows/: rust.yml
lua/ts-analyzer/: init.lua  runner.lua
lua/ts-analyzer-virt/: README.md  init.lua
src/: formatter.rs  main.rs  message_parser.rs  parser.rs  suggestion.rs  token_utils.rs  tokenizer.rs
src/diagnostics/: suggestions.rs
src/error/: codes.rs  core.rs  diagnostics.rs  mod.rs
src/lsp/: proxy.rs
src/suggestion/: mod.rs
