[package]
name = "ts-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ariadne = "0.6.0"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[[bin]]
name = "ts-analyzer"
path = "src/main.rs" 
